--- a/Introspect.xcodeproj/xcshareddata/xcschemes/Introspect macOS.xcscheme
+++ b/Introspect.xcodeproj/xcshareddata/xcschemes/Introspect macOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "C0ED340823F39E93005FA859"
-               BuildableName = "Introspect_macOS.framework"
+               BuildableName = "Introspect.framework"
                BlueprintName = "Introspect macOS"
                ReferencedContainer = "container:Introspect.xcodeproj">
             </BuildableReference>
@@ -61,7 +61,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "C0ED340823F39E93005FA859"
-            BuildableName = "Introspect_macOS.framework"
+            BuildableName = "Introspect.framework"
             BlueprintName = "Introspect macOS"
             ReferencedContainer = "container:Introspect.xcodeproj">
          </BuildableReference>
