--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 
 # Shared Xcode version between jobs
-xcode-version: &xcode-version "11.2.1"
+xcode-version: &xcode-version "11.3.1"
 
 # This is the key that we use to store and restore our dependencies cache.
 # It needs to be different anytime we add Pods, Gems, or npm packages.
@@ -44,6 +44,9 @@ jobs:
           command: >
             bundle exec fastlane ios test
             bundle exec fastlane mac test
+      - run:
+          name: Lint podspec
+          command: bundle exec pod lib lint
       - store_test_results:
           path: output
           
