--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -20,7 +20,7 @@ jobs:
           xcode-version: '12.4'
 
       - name: Select proper Xcode CLI Tools
-        run: xcode-select -s /Library/Developer/CommandLineTools/
+        run: sudo xcode-select -s /Library/Developer/CommandLineTools/
       
       - name: Install gem dependencies
         uses: ruby/setup-ruby@v1
