--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -23,7 +23,7 @@ jobs:
         run: sudo xcode-select -s /Library/Developer/CommandLineTools/
 
       - name: Export macOS SDK
-        run: echo $(xcrun --sdk macosx --show-sdk-path) >> $GITHUB_ENV
+        run: echo SDKROOT=$(xcrun --sdk macosx --show-sdk-path) >> $GITHUB_ENV
       
       - name: Install gem dependencies
         uses: ruby/setup-ruby@v1
