--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -45,10 +45,10 @@ jobs:
         run: swift build -j 2 --disable-index-store -v
 
       - name: Test Framework on iOS and tvOS
-        run: bundle exec fastlane ios test
+        run: bundle exec fastlane ios test ci:github
       
       - name: Test Framework on macOS
-        run: bundle exec fastlane mac test
+        run: bundle exec fastlane mac test ci:github
       
       - name: Lint podspec
         run: bundle exec pod lib lint
