--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
         run: swift build -j 2 --disable-index-store -v
 
       - name: Run Tests
-        run: bundle exec fastlane ${{ matrix.platform }} test ${{ matrix.platform_version }}
+        run: bundle exec fastlane ${{ matrix.platform[0] }} test ${{ matrix.platform[1] }}
 
       - name: Lint podspec
         run: bundle exec pod lib lint
