--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: ci
 
 on:
   push:
@@ -74,7 +74,7 @@ jobs:
         run: swift build -j 2 --disable-index-store -v
 
       - name: Run Tests
-        run: bundle exec fastlane ${{ matrix.platform[0] }} test ${{ matrix.platform[1] }}
+        run: bundle exec fastlane ${{ matrix.platform[0] }} test ${{ matrix.platform[0] }}:${{ matrix.platform[1] }}
 
       - name: Lint podspec
         run: bundle exec pod lib lint
