--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,9 @@ jobs:
         if: steps.cache-pods.outputs.cache-hit != 'true'
         run: bundle exec pod install
 
+      - name: Install Homebrew dependencies
+        run: brew install xcbeautify
+
       - name: Build Swift Package
         run: swift build -j 2 --disable-index-store -v
 
