--- a/Introspect.xcworkspace/xcshareddata/xcschemes/Introspect-Static.xcscheme
+++ b/Introspect.xcworkspace/xcshareddata/xcschemes/Introspect-Static.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1130"
+   LastUpgradeVersion = "1420"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "C0796E1E23F3CCD2002BF033"
-               BuildableName = "Introspect.framework"
-               BlueprintName = "Introspect tvOS"
-               ReferencedContainer = "container:Introspect.xcodeproj">
+               BlueprintIdentifier = "Introspect-Static"
+               BuildableName = "Introspect-Static"
+               BlueprintName = "Introspect-Static"
+               ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -28,16 +28,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "C0796E2E23F3CDA4002BF033"
-               BuildableName = "Introspect tvOS Tests.xctest"
-               BlueprintName = "Introspect tvOS Tests"
-               ReferencedContainer = "container:Introspect.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -60,10 +50,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "C0796E1E23F3CCD2002BF033"
-            BuildableName = "Introspect.framework"
-            BlueprintName = "Introspect tvOS"
-            ReferencedContainer = "container:Introspect.xcodeproj">
+            BlueprintIdentifier = "Introspect-Static"
+            BuildableName = "Introspect-Static"
+            BlueprintName = "Introspect-Static"
+            ReferencedContainer = "container:">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
