--- a/Introspect.xcworkspace/xcshareddata/xcschemes/Introspect.xcscheme
+++ b/Introspect.xcworkspace/xcshareddata/xcschemes/Introspect.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1120"
+   LastUpgradeVersion = "1420"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "C0687011238DE85D00DAFD3D"
-               BuildableName = "Introspect.framework"
-               BlueprintName = "Introspect iOS"
-               ReferencedContainer = "container:Introspect.xcodeproj">
+               BlueprintIdentifier = "Introspect"
+               BuildableName = "Introspect"
+               BlueprintName = "Introspect"
+               ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "C068701A238DE85D00DAFD3D"
-               BuildableName = "Introspect iOS Tests.xctest"
-               BlueprintName = "Introspect iOS Tests"
-               ReferencedContainer = "container:Introspect.xcodeproj">
+               BlueprintIdentifier = "IntrospectTests"
+               BuildableName = "IntrospectTests"
+               BlueprintName = "IntrospectTests"
+               ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -60,10 +60,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "C0687011238DE85D00DAFD3D"
-            BuildableName = "Introspect.framework"
-            BlueprintName = "Introspect iOS"
-            ReferencedContainer = "container:Introspect.xcodeproj">
+            BlueprintIdentifier = "Introspect"
+            BuildableName = "Introspect"
+            BlueprintName = "Introspect"
+            ReferencedContainer = "container:">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
