--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 xcuserdata/
 DerivedData/
 .netrc
+
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots/**/*.png
+fastlane/test_output
