--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
           bundler-cache: true
 
       - name: Lint Podspec
-        run: bundle exec pod lib lint
+        run: pod lib lint
 
       - name: Run Tests
         run: bundle exec fastlane ${{ matrix.platform[0] }} test version:${{ matrix.platform[1] }}
