--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,8 @@ jobs:
           - [ios, 14]
           - [ios, 15]
           - [ios, 16]
-          # - mac
+          - [mac, 11]
+          - [mac, 12]
         include:
           - platform: [ios, 14]
             os: macos-11
@@ -34,6 +35,13 @@ jobs:
           - platform: [ios, 16]
             os: macos-12
             xcode: 14.2
+          - platform: [mac, 11]
+            os: macos-11
+            xcode: 12.5.1
+          - platform: [mac, 12]
+            os: macos-12
+            xcode: 13.3.1
+
 
     steps:
 
