--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
         run: brew install xcbeautify
 
       - name: Lint Podspec
-        run: pod lib lint
+        run: bundle exec pod lib lint
 
       - name: Run Tests
-        run: fastlane ${{ matrix.platform[0] }} test version:${{ matrix.platform[1] }}
+        run: bundle exec fastlane ${{ matrix.platform[0] }} test version:${{ matrix.platform[1] }}
