--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,22 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  lint_podspec:
+    name: lint-podspec
+    runs-on: macos-latest
+    steps:
+      - name: Git Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # required to be able to find Git tags
+
+      - name: Lint Podspec
+        run: |
+          export LIB_VERSION=$(git describe --tags `git rev-list --tags --max-count=1`)
+          pod lib lint --allow-warnings
+
   ci:
+    needs: lint_podspec
     name: ${{ matrix.platform[0] }} ${{ matrix.platform[1] }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -41,12 +56,9 @@ jobs:
           - platform: [macos, 12]
             os: macos-12
             xcode: 14.0.1
-
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # required to be able to find Git tags
 
       - name: Select Xcode version
         uses: maxim-lobanov/setup-xcode@v1
@@ -55,11 +67,6 @@ jobs:
 
       - name: Install Homebrew dependencies
         run: brew install xcbeautify
-
-      - name: Lint Podspec
-        run: |
-          export LIB_VERSION=$(git describe --tags `git rev-list --tags --max-count=1`)
-          pod lib lint --allow-warnings
 
       - name: Run Tests
         run: fastlane ${{ matrix.platform[0] }} test version:${{ matrix.platform[1] }}
