--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,28 +34,31 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform:
+        platform_and_version:
           - [ios, 14]
-          - [ios, 15]
-          - [ios, 16]
-          - [macos, 11]
-          - [macos, 12]
+          # - [ios, 15]
+          # - [ios, 16]
+          # - [tvos, 14]
+          # - [tvos, 15]
+          # - [tvos, 16]
+          # - [macos, 11]
+          # - [macos, 12]
         include:
           - platform: [ios, 14]
             os: macos-11
-            xcode: 12.5.1
-          - platform: [ios, 15]
-            os: macos-12
-            xcode: 13.4.1
-          - platform: [ios, 16]
-            os: macos-12
-            xcode: 14.2
-          - platform: [macos, 11]
-            os: macos-11
-            xcode: 13.0
-          - platform: [macos, 12]
-            os: macos-12
-            xcode: 14.0.1
+            xcode_version: 13.2.1
+          # - platform: [ios, 15]
+          #   os: macos-12
+          #   xcode_version: 14.2
+          # - platform: [ios, 16]
+          #   os: macos-12
+          #   xcode_version: 14.2
+          # - platform: [macos, 11]
+          #   os: macos-11
+          #   xcode_version: 13.2.1
+          # - platform: [macos, 12]
+          #   os: macos-12
+          #   xcode_version: 14.2
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
@@ -63,7 +66,18 @@ jobs:
       - name: Select Xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: ${{ matrix.xcode }}
+          xcode-version: ${{ matrix.xcode_version }}
+
+      - name: Symlink SDK
+        run: |
+          echo "Creating Runtimes folder if needed..."
+          sudo mkdir -p /Library/Developer/CoreSimulator/Profiles/Runtimes
+
+          echo "Creating symlink of the iOS 14.5 runtime..."
+          sudo ln -s /Applications/Xcode_12.5.1.app/Contents/Developer/Platforms/iPhoneOS.platform/Library/Developer/CoreSimulator/Profiles/Runtimes/iOS.simruntime /Library/Developer/CoreSimulator/Profiles/Runtimes/iOS\ 14.5.simruntime
+
+          # echo "Creating symlink of the tvOS 13.4 runtime"
+          # sudo ln -s /Applications/Xcode_11.7.app/Contents/Developer/Platforms/AppleTVOS.platform/Library/Developer/CoreSimulator/Profiles/Runtimes/tvOS.simruntime /Library/Developer/CoreSimulator/Profiles/Runtimes/tvOS\ 13.4.simruntime
 
       - name: Install Homebrew dependencies
         run: brew install xcbeautify
