--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform_and_version:
+        platform:
           - [ios, 14]
           # - [ios, 15]
           # - [ios, 16]
@@ -83,4 +83,4 @@ jobs:
         run: brew install xcbeautify
 
       - name: Run Tests
-        run: fastlane ${{ matrix.platform[0] }} test version:${{ matrix.platform[1] }}
+        run: fastlane ${{ matrix.platform[0] }} test platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }}
