--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       matrix:
         platform:
           - [ios, 14]
-          # - [ios, 15]
+          - [ios, 15]
           # - [ios, 16]
           # - [tvos, 14]
           # - [tvos, 15]
@@ -48,9 +48,10 @@ jobs:
             os: macos-11
             xcode_version: 13.2.1
             sdk: [12.5.1, iPhoneOS, iOS, 14.5]
-          # - platform: [ios, 15]
-          #   os: macos-12
-          #   xcode_version: 14.2
+          - platform: [ios, 15]
+            os: macos-12
+            xcode_version: 14.2
+            sdk: [13.4.1, iPhoneOS, iOS, 15.5]
           # - platform: [ios, 16]
           #   os: macos-12
           #   xcode_version: 14.2
@@ -86,3 +87,6 @@ jobs:
 
       - name: Run Tests
         run: fastlane test platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }}
+        env:
+          SKIP_SLOW_FASTLANE_WARNINGS: true
+          FASTLANE_SKIP_UPDATE_CHECK: true
