--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,11 +36,14 @@ jobs:
       matrix:
         platform:
           - [ios, 14]
+          - [tvos, 14]
+
           - [ios, 15]
+          - [tvos, 15]
+
           - [ios, 16]
-          # - [tvos, 14]
-          # - [tvos, 15]
-          # - [tvos, 16]
+          - [tvos, 16]
+
           - [macos, 11]
           - [macos, 12]
         include:
@@ -48,13 +51,27 @@ jobs:
             os: macos-11
             xcode_version: 13.2.1
             sdk: [12.5.1, iPhoneOS, iOS, 14.5]
+          - platform: [tvos, 14]
+            os: macos-11
+            xcode_version: 13.2.1
+            sdk: [12.5.1, AppleTVOS, tvOS, 14.5]
+
           - platform: [ios, 15]
             os: macos-12
             xcode_version: 14.2
             sdk: [13.4.1, iPhoneOS, iOS, 15.5]
+          - platform: [tvos, 15]
+            os: macos-12
+            xcode_version: 14.2
+            sdk: [13.4.1, AppleTVOS, tvOS, 15.5]
+
           - platform: [ios, 16]
             os: macos-12
             xcode_version: 14.2
+          - platform: [tvos, 16]
+            os: macos-12
+            xcode_version: 14.2
+
           - platform: [macos, 11]
             os: macos-11
             xcode_version: 13.2.1
@@ -79,14 +96,11 @@ jobs:
           echo "Creating symlink of the ${{ matrix.sdk[2] }} ${{ matrix.sdk[3] }} runtime..."
           sudo ln -s /Applications/Xcode_${{ matrix.sdk[0] }}.app/Contents/Developer/Platforms/${{ matrix.sdk[1] }}.platform/Library/Developer/CoreSimulator/Profiles/Runtimes/${{ matrix.sdk[2] }}.simruntime /Library/Developer/CoreSimulator/Profiles/Runtimes/${{ matrix.sdk[2] }}\ ${{ matrix.sdk[3] }}.simruntime
 
-          # echo "Creating symlink of the tvOS 13.4 runtime"
-          # sudo ln -s /Applications/Xcode_11.7.app/Contents/Developer/Platforms/AppleTVOS.platform/Library/Developer/CoreSimulator/Profiles/Runtimes/tvOS.simruntime /Library/Developer/CoreSimulator/Profiles/Runtimes/tvOS\ 13.4.simruntime
-
       - name: Install Homebrew dependencies
         run: brew install xcbeautify
 
       - name: Run Tests
         run: fastlane test platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }}
         env:
-          SKIP_SLOW_FASTLANE_WARNINGS: true
-          FASTLANE_SKIP_UPDATE_CHECK: true
+          SKIP_SLOW_FASTLANE_WARNINGS: 1
+          FASTLANE_SKIP_UPDATE_CHECK: 1
