--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,31 +35,48 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - [ios, 13]
           - [ios, 14]
           - [ios, 15]
           - [ios, 16]
+
+          - [tvos, 14]
+          - [tvos, 15]
+          - [tvos, 16]
+
           - [macos, 11]
           - [macos, 12]
         include:
-          - platform: [ios, 13]
-            os: macos-11
-            xcode: 11.7
           - platform: [ios, 14]
             os: macos-11
-            xcode: 12.5.1
+            xcode_version: 13.2.1
+            sdk: [12.5.1, iPhoneOS, iOS, 14.5]
+          - platform: [tvos, 14]
+            os: macos-11
+            xcode_version: 13.2.1
+            sdk: [12.5.1, AppleTVOS, tvOS, 14.5]
+
           - platform: [ios, 15]
             os: macos-12
-            xcode: 13.4.1
+            xcode_version: 14.2
+            sdk: [13.4.1, iPhoneOS, iOS, 15.5]
+          - platform: [tvos, 15]
+            os: macos-12
+            xcode_version: 14.2
+            sdk: [13.4.1, AppleTVOS, tvOS, 15.5]
+
           - platform: [ios, 16]
             os: macos-12
-            xcode: 14.2
+            xcode_version: 14.2
+          - platform: [tvos, 16]
+            os: macos-12
+            xcode_version: 14.2
+
           - platform: [macos, 11]
             os: macos-11
-            xcode: 13.0
+            xcode_version: 13.2.1
           - platform: [macos, 12]
             os: macos-12
-            xcode: 14.0.1
+            xcode_version: 14.2
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
@@ -67,13 +84,22 @@ jobs:
       - name: Select Xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: ${{ matrix.xcode }}
+          xcode-version: ${{ matrix.xcode_version }}
+
+      - if: ${{ matrix.sdk }}
+        name: Symlink SDK
+        run: |
+          echo "Creating Runtimes folder if needed..."
+          sudo mkdir -p /Library/Developer/CoreSimulator/Profiles/Runtimes
+
+          echo "Creating symlink of the ${{ matrix.sdk[2] }} ${{ matrix.sdk[3] }} runtime..."
+          sudo ln -s /Applications/Xcode_${{ matrix.sdk[0] }}.app/Contents/Developer/Platforms/${{ matrix.sdk[1] }}.platform/Library/Developer/CoreSimulator/Profiles/Runtimes/${{ matrix.sdk[2] }}.simruntime /Library/Developer/CoreSimulator/Profiles/Runtimes/${{ matrix.sdk[2] }}\ ${{ matrix.sdk[3] }}.simruntime
 
       - name: Install Homebrew dependencies
         run: brew install xcbeautify
 
-      - name: List Available Simulators
-        run: xcrun simctl list devices available
-
       - name: Run Tests
-        run: fastlane ${{ matrix.platform[0] }} test version:${{ matrix.platform[1] }}
+        run: fastlane test platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }}
+        env:
+          SKIP_SLOW_FASTLANE_WARNINGS: 1
+          FASTLANE_SKIP_UPDATE_CHECK: 1
