--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,12 @@ jobs:
       fail-fast: false
       matrix:
         platform:
+          - [ios, 13]
           - [ios, 14]
           - [ios, 15]
           - [ios, 16]
 
+          - [tvos, 13]
           - [tvos, 14]
           - [tvos, 15]
           - [tvos, 16]
@@ -46,37 +48,46 @@ jobs:
           - [macos, 11]
           - [macos, 12]
         include:
+          - platform: [ios, 13]
+            os: macos-11
+            xcode: 13.2.1
+            sdk: [11.7, iPhoneOS, iOS, 13.7]
+          - platform: [tvos, 13]
+            os: macos-11
+            xcode: 13.2.1
+            sdk: [11.7, AppleTVOS, tvOS, 13.4]
+
           - platform: [ios, 14]
             os: macos-11
-            xcode_version: 13.2.1
+            xcode: 13.2.1
             sdk: [12.5.1, iPhoneOS, iOS, 14.5]
           - platform: [tvos, 14]
             os: macos-11
-            xcode_version: 13.2.1
+            xcode: 13.2.1
             sdk: [12.5.1, AppleTVOS, tvOS, 14.5]
 
           - platform: [ios, 15]
             os: macos-12
-            xcode_version: 14.2
+            xcode: 14.2
             sdk: [13.4.1, iPhoneOS, iOS, 15.5]
           - platform: [tvos, 15]
             os: macos-12
-            xcode_version: 14.2
+            xcode: 14.2
             sdk: [13.4.1, AppleTVOS, tvOS, 15.5]
 
           - platform: [ios, 16]
             os: macos-12
-            xcode_version: 14.2
+            xcode: 14.2
           - platform: [tvos, 16]
             os: macos-12
-            xcode_version: 14.2
+            xcode: 14.2
 
           - platform: [macos, 11]
             os: macos-11
-            xcode_version: 13.2.1
+            xcode: 13.2.1
           - platform: [macos, 12]
             os: macos-12
-            xcode_version: 14.2
+            xcode: 14.2
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
@@ -84,7 +95,7 @@ jobs:
       - name: Select Xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: ${{ matrix.xcode_version }}
+          xcode-version: ${{ matrix.xcode }}
 
       - if: ${{ matrix.sdk }}
         name: Symlink SDK
