--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,6 +114,7 @@ jobs:
 
       # - if: ${{ matrix.platform != [ios, 13] }}
       - name: Run Tests (Introspect)
+        continue-on-error: true
         run: fastlane test platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }} scheme:Introspect
 
       - name: Run Tests (SwiftUIIntrospection)
