--- a/Examples/Showcase/Showcase.xcodeproj/xcshareddata/xcschemes/Showcase.xcscheme
+++ b/Examples/Showcase/Showcase.xcodeproj/xcshareddata/xcschemes/Showcase.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1420"
+   LastUpgradeVersion = "1340"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "SwiftUIIntrospect-Dynamic"
-               BuildableName = "SwiftUIIntrospect-Dynamic"
-               BlueprintName = "SwiftUIIntrospect-Dynamic"
-               ReferencedContainer = "container:">
+               BlueprintIdentifier = "D53071F229983CEF00F1936C"
+               BuildableName = "Showcase.app"
+               BlueprintName = "Showcase"
+               ReferencedContainer = "container:Showcase.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -40,6 +40,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "D53071F229983CEF00F1936C"
+            BuildableName = "Showcase.app"
+            BlueprintName = "Showcase"
+            ReferencedContainer = "container:Showcase.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -47,15 +57,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "SwiftUIIntrospect-Dynamic"
-            BuildableName = "SwiftUIIntrospect-Dynamic"
-            BlueprintName = "SwiftUIIntrospect-Dynamic"
-            ReferencedContainer = "container:">
+            BlueprintIdentifier = "D53071F229983CEF00F1936C"
+            BuildableName = "Showcase.app"
+            BlueprintName = "Showcase"
+            ReferencedContainer = "container:Showcase.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
