--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
 
   ci:
     name: ${{ matrix.platform[0] }} ${{ matrix.platform[1] }}
-    runs-on: ${{ matrix.os }}
+    runs-on: macos-13
     strategy:
       fail-fast: false
       matrix:
@@ -40,58 +40,27 @@ jobs:
           - [ios, 15]
           - [ios, 16]
 
-          - [tvos, 13]
-          - [tvos, 14]
-          - [tvos, 15]
-          - [tvos, 16]
+          # - [tvos, 13]
+          # - [tvos, 14]
+          # - [tvos, 15]
+          # - [tvos, 16]
 
-          - [macos, 11]
-          - [macos, 12]
-          - [macos, 13]
+          # - [macos, 11]
+          # - [macos, 12]
+          # - [macos, 13]
         include:
           - platform: [ios, 13]
-            os: macos-11
-            xcode: 13.2.1
-            sdk: [11.7, iPhoneOS, iOS, 13.7]
-          - platform: [tvos, 13]
-            os: macos-11
-            xcode: 13.2.1
-            sdk: [11.7, AppleTVOS, tvOS, 13.4]
-
+            runtime: iOS 13.7
+            install: true
           - platform: [ios, 14]
-            os: macos-11
-            xcode: 13.2.1
-            sdk: [12.5.1, iPhoneOS, iOS, 14.5]
-          - platform: [tvos, 14]
-            os: macos-11
-            xcode: 13.2.1
-            sdk: [12.5.1, AppleTVOS, tvOS, 14.5]
-
+            runtime: iOS 14.5
+            install: true
           - platform: [ios, 15]
-            os: macos-12
-            xcode: 14.2
-            sdk: [13.4.1, iPhoneOS, iOS, 15.5]
-          - platform: [tvos, 15]
-            os: macos-12
-            xcode: 14.2
-            sdk: [13.4.1, AppleTVOS, tvOS, 15.5]
-
+            runtime: iOS 15.5
+            install: true
           - platform: [ios, 16]
-            os: macos-13
-            xcode: 14.3
-          - platform: [tvos, 16]
-            os: macos-13
-            xcode: 14.3
-
-          - platform: [macos, 11]
-            os: macos-11
-            xcode: 13.2.1
-          - platform: [macos, 12]
-            os: macos-12
-            xcode: 14.2
-          - platform: [macos, 13]
-            os: macos-13
-            xcode: 14.3
+            runtime: iOS 16.4
+            install: false
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
@@ -99,22 +68,19 @@ jobs:
       - name: Select Xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: ${{ matrix.xcode }}
+          xcode-version: 14.3
 
-      - if: ${{ matrix.sdk }}
-        name: Symlink SDK
+      - name: Install Homebrew dependencies
         run: |
-          echo "Creating Runtimes folder if needed..."
-          sudo mkdir -p /Library/Developer/CoreSimulator/Profiles/Runtimes
+          brew install xcbeautify
+          brew install xcodesorg/made/xcodes
 
-          echo "Creating symlink of the ${{ matrix.sdk[2] }} ${{ matrix.sdk[3] }} runtime..."
-          sudo ln -s /Applications/Xcode_${{ matrix.sdk[0] }}.app/Contents/Developer/Platforms/${{ matrix.sdk[1] }}.platform/Library/Developer/CoreSimulator/Profiles/Runtimes/${{ matrix.sdk[2] }}.simruntime /Library/Developer/CoreSimulator/Profiles/Runtimes/${{ matrix.sdk[2] }}\ ${{ matrix.sdk[3] }}.simruntime
+      - if: ${{ matrix.install }}
+        name: Install Required Runtime
+        run: sudo xcodes runtimes install '${{ matrix.runtime }}'
 
       - name: List Available Simulators
         run: xcrun simctl list devices available
-
-      - name: Install Homebrew dependencies
-        run: brew install xcbeautify
 
       - if: ${{ join(matrix.platform, ' ') != 'ios 13' && join(matrix.platform, ' ') != 'tvos 13' }}
         name: Run Tests (Introspect)
