--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,12 +77,15 @@ jobs:
 
           - platform: [macos, 11]
             os: macos-11
+            xcode: 13.2.1
             install: false
           - platform: [macos, 12]
             os: macos-12
+            xcode: 14.2
             install: false
           - platform: [macos, 13]
             os: macos-13
+            xcode: 14.3
             install: false
     steps:
       - name: Git Checkout
@@ -91,7 +94,7 @@ jobs:
       - name: Select Xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: 14.3
+          xcode-version: ${{ matrix.xcode || '14.3' }}
 
       - name: Install Homebrew dependencies
         run: |
