--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,17 +8,23 @@ on:
 jobs:
   deploy:
     runs-on: macos-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        podspec:
+          - Introspect.podspec
+          - SwiftUIIntrospect.podspec
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0 # required to be able to find Git tags
 
-      - name: Deploy to CocoaPods Trunk
+      - name: Deploy to CocoaPods Trunk (${{ matrix.podspec }})
         run: |
           set -eo pipefail
           export LIB_VERSION=$(git describe --tags `git rev-list --tags --max-count=1`)
-          pod lib lint --allow-warnings
-          pod trunk push --allow-warnings
+          pod lib lint ${{ matrix.podspec }} --allow-warnings
+          pod trunk push ${{ matrix.podspec }} --allow-warnings
         env:
           COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
